//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

import "google/protobuf/descriptor.proto";

extend google.protobuf.FieldOptions {
  optional bool preserve_any = 8000;
}
